# ball_game

./: Cargo.toml  ball_game-242fad4f772a42da.js  ball_game-2840e0b979d3b373.js  ball_game-332ce99f149f07b0.js  ball_game-c9f7d2dc454345a6.js  ball_game-ff1ab316703e8634.js  index.html
.github/workflows/: deploy-page.yaml
crates/ball_interpolator/: Cargo.toml
crates/ball_simulation/: Cargo.toml
crates/ball_simulation/benches/: simulation_benchmark.rs
crates/ball_simulation/src/: collision_finder.rs  collision_primitives.rs  collision_times.rs  lib.rs  tests.rs
src/: colors.rs  game.rs  lib.rs  main.rs  menu.rs
src/game/: accept_user_input.rs  animate_blocks_in.rs  play_simulation.rs  utils.rs
