[package]
name = "ball_game"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/*"
]

[workspace.dependencies]
itertools = "0.10.5"
nalgebra = "0.32.2"
approx = "0.5.1"
ndarray = "0.15.6"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git"}
ball_interpolator = { path = "crates/ball_interpolator" }
ball_simulation = { path = "crates/ball_simulation" }
nalgebra = { workspace = true }
ndarray = { workspace = true }
