[package]
name = "ball_game"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
	"crates/*"
]

[workspace.dependencies]
itertools = "0.10.5"
nalgebra = "0.32.2"
approx = "0.5.1"
ndarray = "0.15.6"
rand = "0.8.5"

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy.git"}
ball_interpolator = { path = "crates/ball_interpolator" }
ball_simulation = { path = "crates/ball_simulation" }
nalgebra = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }

#[target.'cfg(target_os = "android")']
[lib]
name = "ball_game"
crate-type = ["staticlib", "cdylib"]

[package.metadata.android]
package = "alansartorio.ballgame"
apk_name = "ball_game"
assets = "./assets"
resources = "./assets/android-res"
build_targets = ["aarch64-linux-android"]

[package.metadata.android.sdk]
target_sdk_version = 31

[package.metadata.android.application]
icon = "@mipmap/ic_launcher"
label = "Ball Game"
