[package]
name = "ball_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nalgebra = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "simulation_benchmark"
harness = false
