[package]
name = "ball_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nalgebra = { workspace = true }
approx = { workspace = true }

[dev-dependencies]
criterion = { version = "0.4.0" , features = ["html_reports"] }

[[bench]]
name = "simulation_benchmark"
harness = false
